--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,8 @@ updates:
     commit-message:
       prefix: "automated"
       include: "scope"
+    ignore:
+      - dependency-name: github.com/gostaticanalysis/testutil
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
