fix lint config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,7 @@
 linters-settings:
   gci:
-    local-prefixes: github.com/ckaznocha/intrange
+    sections:
+      - prefix(github.com/ckaznocha/intrange)
   gocritic:
     enabled-tags:
       - diagnostic
@@ -10,10 +11,7 @@ linters-settings:
       - style
   goimports:
     local-prefixes: github.com/ckaznocha/intrange
-  golint:
-    min-confidence: 0
   govet:
-    check-shadowing: true
     enable:
       - asmdecl
       - assign
@@ -24,6 +22,7 @@ linters-settings:
       - cgocall
       - composite
       - copylock
+      - copyloopvar
       - deepequalerrors
       - errorsas
       - fieldalignment
@@ -57,14 +56,13 @@ linters:
     - dupl
     - errcheck
     - errorlint
-    - exportloopref
     - gci
     - gochecknoinits
     - goconst
     - gocritic
     - godot
     - godox
-    - goerr113
+    - err113
     - gofmt
     - gofumpt
     - goimports
@@ -93,6 +91,6 @@ linters:
     - wastedassign
     - whitespace
     - wsl
-run:
-  skip-dirs:
+issues:
+  exclude-dirs:
     - testdata/
