--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           cache: false
       - uses: golangci/golangci-lint-action@v6
         with:
-          version: 1.64
+          version: v1.64
   test:
     needs: build
     runs-on: ubuntu-latest
