Update go to 1.23 and latest x pkgs (#53)
* Update go to 1.23 and latest x pkgs

* Update lint job

* Remove govet tools not in jsonschema

* Add missing govet checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
           cache: false
       - uses: golangci/golangci-lint-action@v6
         with:
-          version: latest
-          install-mode: goinstall
+          version: v1.64
   test:
     needs: build
     runs-on: ubuntu-latest
