--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: ci
 on: [push, pull_request]
-permissions: read-all
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -82,10 +81,9 @@ jobs:
           path: main.breakdown
           if-no-files-found: error
       - uses: thollander/actions-comment-pull-request@v3
-        if: github.event.number
+        if: github.event_name == 'pull_request'
         with:
           comment-tag: coverage-report
-          pr-number: ${{ github.event.number }}
           message: |
             go-test-coverage report:
             ```
