--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 name: ci
 on: [push, pull_request]
-permissions:
-  pull-requests: write
+permissions: read-all
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -53,6 +52,8 @@ jobs:
           path: cover.out
           if-no-files-found: error
   check-coverage:
+    permissions:
+      pull-requests: write
     needs: test
     runs-on: ubuntu-latest
     steps:
