--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["intrange"]
+  "cSpell.words": [
+    "analysistest",
+    "Fset",
+    "gostaticanalysis",
+    "intrange",
+    "testutil",
+    "vettool"
+  ]
 }
