--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,3 +122,9 @@ jobs:
           go-version-file: go.work
           check-latest: true
           go-package: ./...
+  osv-scanner:
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@256cd6a9fe070e8cc443188861a7066e506f3eea" # v2.0.0
