--- a/.github/workflows/scanners.yml
+++ b/.github/workflows/scanners.yml
@@ -2,12 +2,12 @@ name: Scorecard supply-chain security
 on:
   branch_protection_rule:
   schedule:
-    - cron: '31 23 * * 5'
+    - cron: "31 23 * * 5"
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 permissions: read-all
 jobs:
-  analysis:
+  scorecard-analysis:
     name: Scorecard analysis
     runs-on: ubuntu-latest
     permissions:
@@ -39,3 +39,9 @@ jobs:
         uses: github/codeql-action/upload-sarif@1b549b9259bda1cb5ddde3b41741a82a2d15a841 # v3.28.13
         with:
           sarif_file: results.sarif
+  osv-scanner:
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    uses: google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@98b584ee2ed2da3935ccce10e06739d54cdcd20b # v2.0.0
