--- a/.github/workflows/scanners.yml
+++ b/.github/workflows/scanners.yml
@@ -4,7 +4,8 @@ on:
   schedule:
     - cron: "31 23 * * 5"
   push:
-    branches: ["main"]
+    branches:
+      - main
 permissions: read-all
 jobs:
   scorecard-analysis:
