--- a/.github/workflows/scanners.yml
+++ b/.github/workflows/scanners.yml
@@ -42,6 +42,9 @@ jobs:
           sarif_file: results.sarif
   govulncheck:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      id-token: write
     steps:
       - name: Harden the runner (Audit all outbound calls)
         uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
