--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,6 +132,7 @@ jobs:
     if: github.event_name == 'pull_request'
     uses: google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@98b584ee2ed2da3935ccce10e06739d54cdcd20b # v2.0.0
   dependency-review:
+    if: github.event_name == 'pull_request'
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
