--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,3 +33,14 @@ updates:
     commit-message:
       prefix: "automated"
       include: "scope"
+  - package-ecosystem: "devcontainers"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    assignees:
+      - ckaznocha
+    reviewers:
+      - ckaznocha
+    commit-message:
+      prefix: "automated"
+      include: "scope"
