--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,8 @@
-name: ci
+name: Go
 on:
   pull_request:
-    branches:
-      - main
   merge_group:
-    branches:
-      - main
+    types: [checks_requested]
   push:
     branches:
       - main
@@ -113,19 +110,3 @@ jobs:
         if: steps.coverage.outcome == 'failure'
         shell: bash
         run: echo "coverage check failed" && exit 1
-  dependency-review:
-    if: github.event_name == 'pull_request'
-    permissions:
-      pull-requests: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
-        with:
-          egress-policy: audit
-      - name: "Checkout Repository"
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: "Dependency Review"
-        uses: actions/dependency-review-action@3b139cfc5fae8b618d3eae3675e383bb1769c019 # v4.5.0
-        with:
-          comment-summary-in-pr: always
