Attempt to fix PR comments on forks

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,7 @@
 name: Go
 on:
-  pull_request:
+  pull_request_target:
+    types: [assigned, opened, synchronize, reopened]
   merge_group:
     types: [checks_requested]
   push:
