--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
         with:
           go-version-file: go.work
-      - run: apt update && apt install shellcheck
+      - run: sudo apt update && sudo apt install shellcheck
       - run: go tool actionlint -shellcheck shellcheck
